Removes media query that sets the overflow to auto in .no-scroll class on devices greater than 768px. PopoutMenu useEffect will instead check if the innerWidth of the window is less than 768px before applying a .no-scroll class. This is to ensure that the .no-scroll class is usuable for other components

--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,6 @@
 
 
 .scrolling-wrapper {
-  overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
 }
@@ -90,13 +89,4 @@
 .scrolling-wrapper::-webkit-scrollbar {
   width: 0;
   height: 0;
-}
-
-@media screen and (min-width: 640px) {
-  /* When viewport width is 640px or greater,
-   overflow: auto is applied to the no-scroll class to
-   allow scrolling of the body. */
-  .no-scroll {
-    overflow: auto;
-  }
 }
